infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  #name of the deployement
  name: nats-depl
spec:
  # number of pods we want to create
  replicas: 1
  selector:
    matchLabels:
      # label can be anything instead of app
      app: nats

  #very similar to pod config file
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming:0.25.2
          args:
            [
              "-p",
              "4222",
              "-m",
              "8222",
              "-hbi",
              "5s",
              "-hbt",
              "5s",
              "-hbf",
              "2",
              "-SD",
              "-cid",
              "ticketing",
            ]
---
# services
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  selector:
    # matchlabels from the deployment
    app: nats
  ports:
    # name can be anything
    - name: client
      protocol:
        TCP
        # app listening on 3000
      port: 4222
      targetPort: 4222

    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
